# nerve-community

./: .gitignore  COMO-HACER-TU-PRIMER-PR.md  GLOSARIO.md  MEGA_RETO.md  PYTHON_GENERAL_ISSUES.md  README.md  RETOS_ISSUES.md  TRANSPARENCIA.md  s.html  setup_github.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  propuesta_nuevo_reto.yml  reto.yml
.github/workflows/: auto-format.yml  saludo-bienvenida.yml
archivo-historico/glosario/: README.md  conceptos-software.md
discord-bot/: .env.example  bot.py  requirements.txt
docs/: EMPEZAR-CON-SOLO-TU-CELULAR.md  PYTHON_GENERAL_ISSUES.md  Porque.md  reddit_posts_drafts.md  ruta-de-aprendizaje.md
ejemplos/01-hola-nerve/: README.md
ejemplos/02-pub-sub-basico/: README.md  suscriptor.py
ejemplos/03-peticion-respuesta/: README.md  servidor.py
glosario/: README.md  conceptos-software.md  git-github.md  python.md  redes-sockets.md  terminal-linux.md  terminal-windows.md
glosario/go/: 01-fundamentos.md  02-control-de-flujo.md  03-funciones.md  04-estructuras-de-datos.md  05-modulos-y-librerias.md  06-manejo-de-errores.md  07-archivos-y-entrada-salida.md  08-poo-basica.md  09-concurrencia.md  README.md
glosario/rust/: README.md  (+8 more)
retos/nerve/nivel-2-intermedio/05-logger-distribuido/solucion/Vidot1-Rust/: Cargo.toml  readme.md
retos/nerve/nivel-2-intermedio/05-logger-distribuido/solucion/Vidot1-Rust/src/: db.rs  main.rs  nerve.rs
retos/nerve/nivel-2-intermedio/05-logger-distribuido/solucion/Vidot1-Rust/tests/: test.rs
(+307 files in other folders)
