[package]
name = "nerveLogger"
version = "0.1.0"
edition = "2024"

[dependencies]

# Conexion con Nerve y DB
alenia-nerve = "1.5.0"
tokio = "1.53.0"
rusqlite = "0.40.1"

# Serializacion
serde = "1.0.228"
serde_json = "1.0.150"

# Canales para hilos
chrono = "0.4.45"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
